Fix carousel bug - scrollbars added when clicking left arrow button

--- a/client/src/components/carousel-card/carousel-card.styles.scss
+++ b/client/src/components/carousel-card/carousel-card.styles.scss
@@ -27,14 +27,14 @@
     border-radius: 4px 4px 0 0;
     background-color: #dddddd;
   }
-}
 
-.card-footer {
-  padding: 0.875rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 0.8rem;
+  .card-footer {
+    padding: 0.875rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.8rem;
+  }
 
   .user-details-container {
     display: flex;
@@ -88,13 +88,6 @@
   }
 }
 
-// 1100 - 1300: 1/4
-// @media (max-width: 1300px) {
-//   .card {
-//     min-width: 25%;
-//     width: 25%;
-//   }
-// }
 // 926-1200: 3 cards
 @media (max-width: 1200px) {
   .card {
@@ -113,23 +106,27 @@
     }
   }
 }
-// 0-650px: 1 card
+// 0-600px: 1 card
 @media (max-width: 600px) {
   .card {
     min-width: 100%;
     width: 100%;
     border-radius: 0;
     transform: none;
+
     &:hover {
       transform: none;
       box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
     }
-    .card-photo {
-      border-radius: 0;
-    }
 
     .card-photo {
-      height: 350px;
+      border-radius: 0;
+      height: 70vw;
+      min-height: 350px;
+    }
+
+    .card-footer {
+      padding: 0.875rem 1.5rem;
     }
   }
 }
